app-with-mysql/app.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spring-mysql
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: spring-mysql
    spec:
      containers:
      - name: spring-mysql
        image: wdxxsez/spring-music-mysql:1.0
        ports:
        - containerPort: 8080
