app-with-mysql/app-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: spring-mysql
    http-route-sync: spring-mysql
  name: spring-mysql
  annotations:
    traefik.backend.loadbalancer.method: drr
spec:
  ports:
    - port: 8080
  selector:
    app: spring-mysql
  type: NodePort
