app-with-mysql/phpadmin.yml
apiVersion: v1
kind: Service
metadata:
  name: myadmin
  labels:
    http-route-sync: myadmin
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: myadmin
  type: NodePort
